--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8421,3 +8421,39 @@ p {
   color: #fff;
 }
 
+/* footer */
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+}
+
+footer a {
+  color: #555;
+}
+
+footer a:hover {
+  color: #222;
+}
+
+footer small {
+  float: left;
+}
+
+footer ul {
+  float: right;
+  margin-left: 15px;
+}
+
+footer ul li {
+  float: left;
+  margin-left: 15px;
+}
+
+footer .slogon {
+  font-size: 13px;
+  font-weight: bold;
+}
+
