--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8421,6 +8421,14 @@ p {
   color: #fff;
 }
 
+#logout {
+  cursor: default;
+}
+
+#logout:hover {
+  backgroud-color: transparent;
+}
+
 /* footer */
 
 footer {
